# py-cli-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
