[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/..."

[tool.poetry.scripts]
cli = '{{cookiecutter.project_slug}}.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
Click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-black = "^0.3"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.4"
pytest-pydocstyle = "^2.0"
pytest-sugar = "^0.9"
pytest-isort = "^0.3"
black = "^20.8b1"

[tool.black]
line-length = 100
target-version = ['py37']
